2003-01-03     Till Straumann  <strauman@slac.stanford.edu>

	* ChangeLog, base_fs.c, getpwent.c, privateenv.c 
	Per PR303, Fix violation of node_access copy syemantics 

2002-12-26     Till Straumann  <strauman@slac.stanford.edu

        * src/fchdir.c: PR302 fix violation of FS node object copy semantics.

2002-12-06	Joel Sherrill <joel@OARcorp.com>

	* src/malloc.c: Fixed code that incorrected did a disable dispatch
	instead of locking and unlocking the allocator mutex.

2002-12-06	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Add various checks to enhance portability.
	* src/termios.c: Reflect changes to configure.ac.

2002-12-02	Joel Sherrill <joel@OARcorp.com>

	* include/rtems/libio.h: Internally use a union of an unsigned64
	and major/minor device so we don't get into trouble shifting.
	The h8300 seemed to be impossible to remove warnings otherwise.
	Eventually the structure definition of a dev_t might be better anyway.
	* include/sys/ioccom.h: Added casts to remove warnings on 16 bit
	targets.

2002-11-19	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Cosmetical fixes.

2002-11-19	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Fix package name.

2002-11-18	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Check for sys/cdefs.h, Add NEED_SYS_CDEFS_H.
	Add check for CHAR_BIT.
	* Makefile.am: Conditionally install sys/cdefs.h iff using newlib or
	if the host does not provide sys/cdefs.h (Fixes Linux/posix).

2002-11-18	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Remove -ansi -fasm.
	Add checks to diagnose potential system header conflicts.
	* Makefile.am: Unconditionally install sys/cdefs.h.

2002-11-07      <strauman@slac.stanford.edu>

        * src/mount.c: Per PR297, correct fs_mountme failure paths.

2002-11-01	Joel Sherrill <joel@OARcorp.com>

	* ChangeLog: Corrected.

2002-10-30	Eric Norum <eric.norum@usask.ca>

	* src/printk.c: Add vprintk function for kernel printing